--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,7 @@ name: CI
 # events but only for the master branch
 on:
   push:
+  
 
   pull_request:
 
@@ -20,3 +21,4 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
          - uses: ResearchSoftwareActions/EnsureCleanNotebooksAction@1.1
+         - uses: bulv1ne/python-style-check@v0.3
