--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,4 +26,4 @@ jobs:
            with:
              github_token: ${{ secrets.GITHUB_TOKEN}}
              output_dir: './python_file/'   
-         - uses: bulv1ne/python-style-check@v0.3
+         - uses: CyberZHG/github-action-python-lint@0.0.2
